[tool.poetry]
name = "xsstrike_reborn"
version = "3.2.2"
description = """
XSStrike is a Cross Site Scripting detection suite equipped with four hand written parsers, an intelligent payload generator, a powerful fuzzing engine and an incredibly fast crawler. Instead of injecting payloads and checking it works like all the other tools do, XSStrike analyses the response with multiple parsers and then crafts payloads that are guaranteed to work by context analysis integrated with a fuzzing engine."""
license = "GNU GPLv3"
authors = ["Somdev Sangwan <s0md3v@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/s0md3v/XSStrike"
repository = "https://github.com/s0md3v/XSStrike"
keywords = ["xsstrike", "cross site scripting", "security"]
classifiers = ["Topic :: Security"]
packages = [
    { include = "xsstrike_reborn" },
]

[tool.poetry.scripts]
xsstrike = "xsstrike_reborn.xsstrike:main"

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
tld = "*"
fuzzywuzzy = "*"
requests = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
